--- a/app/src/main/res/layout/activity_huong_dan.xml
+++ b/app/src/main/res/layout/activity_huong_dan.xml
@@ -15,9 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="5dp"
             android:text="HƯỚNG DẪN:"
-            android:layout_margin="30dp"
+            android:layout_margin="10dp"
             android:textColor="@color/white"
             android:textStyle="bold" />
         <TextView
@@ -49,17 +49,9 @@
             android:text="+ Bước 3: Chọn giai đoạn lịch học cần lấy về và Click vào nút (Nhập dữ liệu) phía dưới."
             android:textColor="@color/white"
             android:textStyle="bold" />
-            <Button
-                android:id="@+id/btnYoutube"
-                android:text="Xem hướng dẫn youtube"
-                android:textColor="@color/white"
-                android:background="@drawable/bovien"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        <WebView
-            android:id="@+id/webview1"
-            android:layout_width="1dp"
-            android:layout_height="1dp">
-        </WebView>
+        <com.google.android.youtube.player.YouTubePlayerView
+            android:id="@+id/youtube_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </RelativeLayout>
