--- a/app/src/main/res/layout/activity_thongbao.xml
+++ b/app/src/main/res/layout/activity_thongbao.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/Goc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Thongbao">
-
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/txtThongBao"
+        android:text="Thông báo"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:textSize="18dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+    <WebView
+        android:id="@+id/wv_thongbao"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </WebView>
+</LinearLayout>
