--- a/app/src/main/res/drawable/bovien.xml
+++ b/app/src/main/res/drawable/bovien.xml
@@ -5,14 +5,14 @@
 
     <!-- Set màu nền-->
     <solid
-        android:color="#527a8b" >
+        android:color="#ffffff" >
     </solid>
 
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
-    <stroke
-        android:width="3dp"
-        android:color="#b8ccdf" >
-    </stroke>
+    <!--<stroke-->
+        <!--android:width="2dp"-->
+        <!--android:color="#6b7786" >-->
+    <!--</stroke>-->
 
     <!-- các thuộc tính căn chỉnh-->
     <padding
@@ -24,6 +24,6 @@
 
     <!-- và đây là bán kính đường tròn ở 4 góc -->
     <corners
-        android:radius="30dp" >
+        android:radius="50dp" >
     </corners>
 </shape>
