--- a/app/src/main/res/layout/bar.xml
+++ b/app/src/main/res/layout/bar.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:gravity="center"
+    android:gravity="left"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:background="@color/colorPrimary"
     android:layout_height="60dp">
     <ImageView
-        android:layout_marginLeft="20dp"
-        android:src="@drawable/ic_calendar"
-        android:layout_gravity="center"
+        android:background="@drawable/ic_calendar"
         android:layout_width="40dp"
+        android:layout_gravity="center"
         android:layout_height="40dp" />
     <TextView
+        android:layout_weight="1"
         android:id="@+id/txtNameMain"
         android:layout_marginLeft="10dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:textSize="23sp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+
         android:text="@string/app_name"
-        android:textColor="#E4992F"
+        android:textColor="#ffc067"
         android:textStyle="bold"/>
+   <Button
+       android:id="@+id/btnHDdd"
+       android:background="@drawable/ic_question"
+       android:layout_gravity="center"
+       android:layout_width="35dp"
+       android:layout_height="35dp" />
 </LinearLayout>
