--- a/app/src/main/res/layout/fragment_fragment_today.xml
+++ b/app/src/main/res/layout/fragment_fragment_today.xml
@@ -6,27 +6,34 @@
     <RelativeLayout
         android:id="@+id/bk_image"
         android:layout_gravity="center"
-        android:layout_width="250dp"
-        android:layout_height="300dp">
+        android:layout_width="200dp"
+        android:layout_height="250dp">
     </RelativeLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_height="match_parent">
+
         <com.baoyz.widget.PullRefreshLayout
             android:id="@+id/swipeRefreshLayoutNoiBat"
             android:layout_width="match_parent"
-            android:layout_height="427dp"
-            android:layout_weight="0.88">
+            android:layout_height="427dp">
+
             <ListView
                 android:id="@+id/lv_lichhomnay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="5dp" />
+
         </com.baoyz.widget.PullRefreshLayout>
-    </LinearLayout>
-
-
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-5001443737686857/3388404961">
+        </com.google.android.gms.ads.AdView>
+    </RelativeLayout>
 
 </FrameLayout>
