--- a/app/src/main/res/layout/itemchatkhach.xml
+++ b/app/src/main/res/layout/itemchatkhach.xml
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Luong Chung:"
-                android:textSize="10dp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#24578e" />
             <TextView
